Add french translation.

--- a/src/mod_rating_by_type/locale/fr/LC_MESSAGES/django.po
+++ b/src/mod_rating_by_type/locale/fr/LC_MESSAGES/django.po
@@ -22,23 +22,23 @@ msgstr ""
 #: .\mod_rating_by_type\bullets_types.py:31
 msgctxt "bullet_type"
 msgid "11mm Vickers"
-msgstr ""
+msgstr  "11mm Vickers"
 
 #: .\mod_rating_by_type\bullets_types.py:30
 #: .\mod_rating_by_type\bullets_types.py:44
 msgctxt "bullet_type"
 msgid ".303 BMG"
-msgstr ""
+msgstr  ".303 BMG"
 
 #: .\mod_rating_by_type\bullets_types.py:32
 msgctxt "bullet_type"
 msgid "MG 131 (AP)"
-msgstr ""
+msgstr  "MG 131 (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:33
 msgctxt "bullet_type"
 msgid "MG 131 (HE)"
-msgstr ""
+msgstr  "MG 131 (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:34
 #, fuzzy
@@ -46,12 +46,12 @@ msgstr ""
 #| msgid "MG 17 AP [2000]"
 msgctxt "bullet_type"
 msgid "MG 17 (AP)"
-msgstr "MG 17 AP [2000]"
+msgstr  "MG 17 (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:35
 msgctxt "bullet_type"
 msgid "MG 17 (SS)"
-msgstr ""
+msgstr  "MG 17 (SS)"
 
 #: .\mod_rating_by_type\bullets_types.py:36
 #, fuzzy
@@ -59,7 +59,7 @@ msgstr ""
 #| msgid "Breda 12.7 AP/HE [800]"
 msgctxt "bullet_type"
 msgid "Breda 12.7mm (AP)"
-msgstr "Breda 12.7 AP/HE [800]"
+msgstr  "Breda 12.7mm (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:37
 #, fuzzy
@@ -67,73 +67,73 @@ msgstr "Breda 12.7 AP/HE [800]"
 #| msgid "Breda 12.7 AP/HE [800]"
 msgctxt "bullet_type"
 msgid "Breda 12.7mm (HE)"
-msgstr "Breda 12.7 AP/HE [800]"
+msgstr  "Breda 12.7mm (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:38
 msgctxt "bullet_type"
 msgid " Breda 7.7mm"
-msgstr ""
+msgstr  " Breda 7.7mm"
 
 #: .\mod_rating_by_type\bullets_types.py:39
 msgctxt "bullet_type"
 msgid "Pistol bullet"
-msgstr ""
+msgstr  "Balle de pistolet"
 
 #: .\mod_rating_by_type\bullets_types.py:40
 msgctxt "bullet_type"
 msgid "UB (AP)"
-msgstr ""
+msgstr  "UB (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:41
 msgctxt "bullet_type"
 msgid "UB (HE)"
-msgstr ""
+msgstr  "UB (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:42
 msgctxt "bullet_type"
 msgid "ShKAS (AP)"
-msgstr ""
+msgstr  "ShKAS (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:43
 msgctxt "bullet_type"
 msgid ".50 BMG"
-msgstr ""
+msgstr  ".50 BMG"
 
 #: .\mod_rating_by_type\bullets_types.py:45
 #: .\mod_rating_by_type\bullets_types.py:46
 msgctxt "bullet_type"
 msgid "MG 34"
-msgstr ""
+msgstr  "MG 34"
 
 #: .\mod_rating_by_type\bullets_types.py:47
 msgctxt "bullet_type"
 msgid "7.62 Soviet"
-msgstr ""
+msgstr  "7.62 Soviétique"
 
 #: .\mod_rating_by_type\bullets_types.py:48
 msgctxt "bullet_type"
 msgid "4x 7.62 Soviet"
-msgstr ""
+msgstr  "4x 7.62 Soviétique"
 
 #: .\mod_rating_by_type\bullets_types.py:49
 msgctxt "bullet_type"
 msgid "122mm Soviet"
-msgstr ""
+msgstr  "122mm Soviétique"
 
 #: .\mod_rating_by_type\bullets_types.py:50
 msgctxt "bullet_type"
 msgid "130mm Soviet"
-msgstr ""
+msgstr  "130mm Soviétique"
 
 #: .\mod_rating_by_type\bullets_types.py:51
 msgctxt "bullet_type"
 msgid "155mm Soviet"
-msgstr ""
+msgstr  "155mm Soviétique"
 
 #: .\mod_rating_by_type\bullets_types.py:52
 msgctxt "bullet_type"
 msgid "M2 90mm (APHE)"
-msgstr ""
+msgstr  "M2 90mm (APHE)"
 
 #: .\mod_rating_by_type\bullets_types.py:53
 #, fuzzy
@@ -141,17 +141,17 @@ msgstr ""
 #| msgid "SC 1000 [1], SC 50 [16]"
 msgctxt "bullet_type"
 msgid "M2 90mm (HE)"
-msgstr "SC 1000 [1], SC 50 [16]"
+msgstr  "M2 90mm (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:54
 msgctxt "bullet_type"
 msgid "MG 151/15 (AP)"
-msgstr ""
+msgstr  "MG 151/15 (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:55
 msgctxt "bullet_type"
 msgid "MG 151/15 (HE)"
-msgstr ""
+msgstr  "MG 151/15 (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:56
 #, fuzzy
@@ -159,7 +159,7 @@ msgstr ""
 #| msgid "MG 17 AP [1800], MG 151/20 AP/HE [500]"
 msgctxt "bullet_type"
 msgid "MG 151/20 (AP)"
-msgstr "MG 17 AP [1800], MG 151/20 AP/HE [500]"
+msgstr  "MG 151/20 (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:57
 #, fuzzy
@@ -167,7 +167,7 @@ msgstr "MG 17 AP [1800], MG 151/20 AP/HE [500]"
 #| msgid "MG 17 AP [1800], MG 151/20 AP/HE [500]"
 msgctxt "bullet_type"
 msgid "MG 151/20 (HE)"
-msgstr "MG 17 AP [1800], MG 151/20 AP/HE [500]"
+msgstr  "MG 151/20 (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:58
 #, fuzzy
@@ -175,7 +175,7 @@ msgstr "MG 17 AP [1800], MG 151/20 AP/HE [500]"
 #| msgid "BK 37 AP [24]"
 msgctxt "bullet_type"
 msgid "BK 3,7 (AP)"
-msgstr "BK 37 AP [24]"
+msgstr  "BK 3,7 (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:59
 #, fuzzy
@@ -183,62 +183,62 @@ msgstr "BK 37 AP [24]"
 #| msgid "BK 37 HE [24]"
 msgctxt "bullet_type"
 msgid "BK 3,7 (HE)"
-msgstr "BK 37 HE [24]"
+msgstr  "BK 3,7 (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:60
 msgctxt "bullet_type"
 msgid "122mm Soviet (HE)"
-msgstr ""
+msgstr  "122mm Soviétique (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:61
 msgctxt "bullet_type"
 msgid "122mm Soviet (HEAT)"
-msgstr ""
+msgstr  "122mm Soviétique (HEAT)"
 
 #: .\mod_rating_by_type\bullets_types.py:62
 msgctxt "bullet_type"
 msgid "ShVAK (AP)"
-msgstr ""
+msgstr  "ShVAK (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:63
 msgctxt "bullet_type"
 msgid "ShVAK (HE)"
-msgstr ""
+msgstr  "ShVAK (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:64
 msgctxt "bullet_type"
 msgid "VYA-23 (AP)"
-msgstr ""
+msgstr  "VYA-23 (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:65
 msgctxt "bullet_type"
 msgid "VYA-23 (HE)"
-msgstr ""
+msgstr  "VYA-23 (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:66
 msgctxt "bullet_type"
 msgid "SH-37 (AP)"
-msgstr ""
+msgstr  "SH-37 (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:67
 msgctxt "bullet_type"
 msgid "SH-37 (HE)"
-msgstr ""
+msgstr  "SH-37 (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:68
 msgctxt "bullet_type"
 msgid "NS-37 (AP)"
-msgstr ""
+msgstr  "NS-37 (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:69
 msgctxt "bullet_type"
 msgid "NS-37 (HE)"
-msgstr ""
+msgstr  "NS-37 (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:70
 msgctxt "bullet_type"
 msgid "76.2mm 34-K"
-msgstr ""
+msgstr  "76.2mm 34-K"
 
 #: .\mod_rating_by_type\bullets_types.py:71
 #, fuzzy
@@ -246,33 +246,33 @@ msgstr ""
 #| msgid "MG 17 AP [2000]"
 msgctxt "bullet_type"
 msgid "M4 Cobra (AP)"
-msgstr "MG 17 AP [2000]"
+msgstr  "M4 Cobra (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:72
 msgctxt "bullet_type"
 msgid "M4 Cobra (HE)"
-msgstr ""
+msgstr  "M4 Cobra (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:73
 msgctxt "bullet_type"
 msgid "76mm M5 (APHE)"
-msgstr ""
+msgstr  "76mm M5 (APHE)"
 
 #: .\mod_rating_by_type\bullets_types.py:74
 msgctxt "bullet_type"
 msgid "76mm M5 (HE)"
-msgstr ""
+msgstr  "76mm M5 (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:75
 msgctxt "bullet_type"
 msgid "76mm British (HE)"
-msgstr ""
+msgstr  "76mm Britannique (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:76
 #: .\mod_rating_by_type\bullets_types.py:115
 msgctxt "bullet_type"
 msgid "105mm German (HE)"
-msgstr ""
+msgstr  "105mm Allemand (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:77
 #, fuzzy
@@ -280,7 +280,7 @@ msgstr ""
 #| msgid "BK 37 AP [24]"
 msgctxt "bullet_type"
 msgid "Flak 38 (AP)"
-msgstr "BK 37 AP [24]"
+msgstr  "Flak 38 (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:78
 #, fuzzy
@@ -288,201 +288,201 @@ msgstr "BK 37 AP [24]"
 #| msgid "SC 1000 [1], SC 50 [16]"
 msgctxt "bullet_type"
 msgid "Flak 38 (HE)"
-msgstr "SC 1000 [1], SC 50 [16]"
+msgstr  "Flak 38 (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:79
 msgctxt "bullet_type"
 msgid "Flak 36"
-msgstr ""
+msgstr  "Flak 36"
 
 #: .\mod_rating_by_type\bullets_types.py:80
 msgctxt "bullet_type"
 msgid "37mm Pak-35 (HE)"
-msgstr ""
+msgstr  "37mm Pak-35 (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:81
 #: .\mod_rating_by_type\bullets_types.py:83
 msgctxt "bullet_type"
 msgid "37mm German Flak (AP)"
-msgstr ""
+msgstr  "37mm Allemand Flak (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:82
 #: .\mod_rating_by_type\bullets_types.py:84
 msgctxt "bullet_type"
 msgid "37mm German Flak (HE)"
-msgstr ""
+msgstr  "37mm Allemand Flak (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:85
 msgctxt "bullet_type"
 msgid "50mm German (AP)"
-msgstr ""
+msgstr  "50mm Allemand (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:86
 #: .\mod_rating_by_type\bullets_types.py:121
 msgctxt "bullet_type"
 msgid "50mm German (HE)"
-msgstr ""
+msgstr  "50mm Allemand (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:87
 msgctxt "bullet_type"
 msgid "75mm German (AP)"
-msgstr ""
+msgstr  "75mm Allemand (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:88
 #: .\mod_rating_by_type\bullets_types.py:124
 msgctxt "bullet_type"
 msgid "75mm German (HE)"
-msgstr ""
+msgstr  "75mm Allemand (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:89
 msgctxt "bullet_type"
 msgid "77mm German (HE)"
-msgstr ""
+msgstr  "77mm Allemand (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:90
 msgctxt "bullet_type"
 msgid "88mm German Flak (AP)"
-msgstr ""
+msgstr  "88mm Anti-aérien Allemand FLAK (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:91
 msgctxt "bullet_type"
 msgid "88mm German Flak (HE)"
-msgstr ""
+msgstr  "88mm Anti-aérien Allemand FLAK (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:92
 msgctxt "bullet_type"
 msgid "100mm Soviet (AP)"
-msgstr ""
+msgstr  "100mm Soviétique (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:93
 #: .\mod_rating_by_type\bullets_types.py:136
 msgctxt "bullet_type"
 msgid "152mm Soviet (HE)"
-msgstr ""
+msgstr  "152mm Soviétique (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:94
 #: .\mod_rating_by_type\bullets_types.py:137
 msgctxt "bullet_type"
 msgid "25mm 72-K (AP)"
-msgstr ""
+msgstr  "25mm 72-K (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:95
 #: .\mod_rating_by_type\bullets_types.py:138
 msgctxt "bullet_type"
 msgid "25mm 72-K (HE)"
-msgstr ""
+msgstr  "25mm 72-K (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:96
 msgctxt "bullet_type"
 msgid "37mm Soviet (AP)"
-msgstr ""
+msgstr  "37mm Soviétique (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:97
 msgctxt "bullet_type"
 msgid "37mm Soviet (HE)"
-msgstr ""
+msgstr  "37mm Soviétique (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:98
 msgctxt "bullet_type"
 msgid "45mm Soviet (AP)"
-msgstr ""
+msgstr  "45mm Soviétique (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:99
 msgctxt "bullet_type"
 msgid "45mm Soviet (APHE)"
-msgstr ""
+msgstr  "45mm Soviétique (APHE)"
 
 #: .\mod_rating_by_type\bullets_types.py:100
 msgctxt "bullet_type"
 msgid "45mm Soviet (HEAT)"
-msgstr ""
+msgstr  "45mm Soviétique (HEAT)"
 
 #: .\mod_rating_by_type\bullets_types.py:101
 msgctxt "bullet_type"
 msgid "57mm Soviet (AP)"
-msgstr ""
+msgstr  "57mm Soviétique (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:102
 msgctxt "bullet_type"
 msgid "57mm Soviet (APHE)"
-msgstr ""
+msgstr  "57mm Soviétique (APHE)"
 
 #: .\mod_rating_by_type\bullets_types.py:103
 msgctxt "bullet_type"
 msgid "57mm Soviet (HE) "
-msgstr ""
+msgstr  "57mm Soviétique (HE) "
 
 #: .\mod_rating_by_type\bullets_types.py:104
 #: .\mod_rating_by_type\bullets_types.py:139
 msgctxt "bullet_type"
 msgid "76mm Soviet (AP)"
-msgstr ""
+msgstr  "76mm Soviétique (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:105
 #: .\mod_rating_by_type\bullets_types.py:141
 msgctxt "bullet_type"
 msgid "76mm Soviet (HE)"
-msgstr ""
+msgstr  "76mm Soviétique (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:106
 msgctxt "bullet_type"
 msgid "76mm Soviet Naval (HE)"
-msgstr ""
+msgstr  "76mm Naval Soviétique (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:107
 msgctxt "bullet_type"
 msgid "85mm Soviet (AP)"
-msgstr ""
+msgstr  "85mm Soviétique (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:108
 msgctxt "bullet_type"
 msgid "85mm Soviet (APHE)"
-msgstr ""
+msgstr  "85mm Soviétique (APHE)"
 
 #: .\mod_rating_by_type\bullets_types.py:109
 msgctxt "bullet_type"
 msgid "85mm Soviet (HE)"
-msgstr ""
+msgstr  "85mm Soviétique (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:110
 msgctxt "bullet_type"
 msgid "115mm British"
-msgstr ""
+msgstr  "115mm Britannique"
 
 #: .\mod_rating_by_type\bullets_types.py:111
 msgctxt "bullet_type"
 msgid "Hispano (AP)"
-msgstr ""
+msgstr  "Hispano (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:112
 msgctxt "bullet_type"
 msgid "Hispano (HE)"
-msgstr ""
+msgstr  "Hispano (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:113
 msgctxt "bullet_type"
 msgid "40mm Vickers (AP)"
-msgstr ""
+msgstr  "40mm Vickers (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:114
 msgctxt "bullet_type"
 msgid "40mm Vickers (HE)"
-msgstr ""
+msgstr  "40mm Vickers (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:116
 msgctxt "bullet_type"
 msgid "105mm German (HEAT)"
-msgstr ""
+msgstr  "105mm Allemand (HEAT)"
 
 #: .\mod_rating_by_type\bullets_types.py:117
 msgctxt "bullet_type"
 msgid "150mm German (HE)"
-msgstr ""
+msgstr  "150mm Allemand (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:118
 msgctxt "bullet_type"
 msgid "MK 108 (AP)"
-msgstr ""
+msgstr  "MK 108 (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:119
 #, fuzzy
@@ -490,109 +490,109 @@ msgstr ""
 #| msgid "SC 1000 [1], SC 50 [16]"
 msgctxt "bullet_type"
 msgid "MK 108 (HE)"
-msgstr "SC 1000 [1], SC 50 [16]"
+msgstr  "MK 108 (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:120
 msgctxt "bullet_type"
 msgid "50mm German (APHE)"
-msgstr ""
+msgstr  "50mm Allemand (APHE)"
 
 #: .\mod_rating_by_type\bullets_types.py:122
 msgctxt "bullet_type"
 msgid "50mm German (HVAP)"
-msgstr ""
+msgstr  "50mm Allemand (HVAP)"
 
 #: .\mod_rating_by_type\bullets_types.py:123
 msgctxt "bullet_type"
 msgid "75mm German (APHE)"
-msgstr ""
+msgstr  "75mm Allemand (APHE)"
 
 #: .\mod_rating_by_type\bullets_types.py:125
 msgctxt "bullet_type"
 msgid "75mm German (HEAT)"
-msgstr ""
+msgstr  "75mm Allemand (HEAT)"
 
 #: .\mod_rating_by_type\bullets_types.py:126
 msgctxt "bullet_type"
 msgid "75mm German (HVAP)"
-msgstr ""
+msgstr  "75mm Allemand (HVAP)"
 
 #: .\mod_rating_by_type\bullets_types.py:127
 msgctxt "bullet_type"
 msgid "88mm German (AP)"
-msgstr ""
+msgstr  "88mm Allemand (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:128
 msgctxt "bullet_type"
 msgid "88mm German (APHE)"
-msgstr ""
+msgstr  "88mm Allemand (APHE)"
 
 #: .\mod_rating_by_type\bullets_types.py:129
 msgctxt "bullet_type"
 msgid "88mm German (HE)"
-msgstr ""
+msgstr  "88mm Allemand (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:130
 #, fuzzy
 #| msgid "German"
 msgctxt "bullet_type"
 msgid "88mm German"
-msgstr "Allemand"
+msgstr  "88mm Allemand"
 
 #: .\mod_rating_by_type\bullets_types.py:131
 msgctxt "bullet_type"
 msgid "88mm German (HVAP)"
-msgstr ""
+msgstr  "88mm Allemand (HVAP)"
 
 #: .\mod_rating_by_type\bullets_types.py:132
 msgctxt "bullet_type"
 msgid "100mm Soviet (HE)"
-msgstr ""
+msgstr  "100mm Soviétique (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:133
 msgctxt "bullet_type"
 msgid "100mm Soviet (APHE)"
-msgstr ""
+msgstr  "100mm Soviétique (APHE)"
 
 #: .\mod_rating_by_type\bullets_types.py:134
 msgctxt "bullet_type"
 msgid "130mm Soviet (HE)"
-msgstr ""
+msgstr  "130mm Soviétique (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:135
 msgctxt "bullet_type"
 msgid "152mm Soviet (APHE)"
-msgstr ""
+msgstr  "152mm Soviétique (APHE)"
 
 #: .\mod_rating_by_type\bullets_types.py:140
 msgctxt "bullet_type"
 msgid "76mm Soviet (APHE)"
-msgstr ""
+msgstr  "76mm Soviétique (APHE)"
 
 #: .\mod_rating_by_type\bullets_types.py:142
 msgctxt "bullet_type"
 msgid "76mm Soviet (HVAP)"
-msgstr ""
+msgstr  "76mm Soviétique (HVAP)"
 
 #: .\mod_rating_by_type\bullets_types.py:143
 msgctxt "bullet_type"
 msgid "155mm Soviet (HE)"
-msgstr ""
+msgstr  "155mm Soviétique (HE)"
 
 #: .\mod_rating_by_type\bullets_types.py:144
 msgctxt "bullet_type"
 msgid "75mm Soviet (AP)"
-msgstr ""
+msgstr  "75mm Soviétique (AP)"
 
 #: .\mod_rating_by_type\bullets_types.py:145
 msgctxt "bullet_type"
 msgid "75mm Soviet (APHE)"
-msgstr ""
+msgstr  "75mm Soviétique (APHE)"
 
 #: .\mod_rating_by_type\bullets_types.py:146
 msgctxt "bullet_type"
 msgid "75mm Soviet (HE)"
-msgstr ""
+msgstr  "75mm Soviétique (HE)"
 
 #: .\mod_rating_by_type\templates\base.html:47
 msgid ""
@@ -644,10 +644,8 @@ msgstr "Classement des pilotes"
 
 #: .\mod_rating_by_type\templates\base.html:87
 #: .\mod_rating_by_type\templates\ironman_pilots.html:3
-#, fuzzy
-#| msgid "Pilot Rankings"
 msgid "Ironman Rankings"
-msgstr "Classement des pilotes"
+msgstr "Classement “Ironman”"
 
 #: .\mod_rating_by_type\templates\base.html:89
 #: .\mod_rating_by_type\templates\squads.html:3
@@ -686,11 +684,11 @@ msgstr "Tour"
 
 #: .\mod_rating_by_type\templates\ironman_pilots.html:14
 msgid "Ironman Rankings (Best streak)"
-msgstr ""
+msgstr "Classement “Ironman” (meilleure série)"
 
 #: .\mod_rating_by_type\templates\ironman_pilots.html:16
 msgid "Ironman Rankings (Living Pilots)"
-msgstr ""
+msgstr "Classement “Ironman” (pilotes vivants)"
 
 #: .\mod_rating_by_type\templates\ironman_pilots.html:23
 #: .\mod_rating_by_type\templates\pilots.html:19
@@ -1983,13 +1981,11 @@ msgstr ""
 
 #: .\mod_rating_by_type\templates\pilot_sortie.html:778
 msgid "Damage Report"
-msgstr ""
+msgstr "Compte rendu des dommages"
 
 #: .\mod_rating_by_type\templates\pilot_sortie.html:781
-#, fuzzy
-#| msgid "Number of shots"
 msgid "Number of hits taken"
-msgstr "Nombre de tirs"
+msgstr "Nombre de tirs reçus"
 
 #: .\mod_rating_by_type\templates\pilot_vlife.html:3
 #: .\mod_rating_by_type\templates\pilot_vlife.html:15
