Put ammo breakdown in alphebatical order.

--- a/changelog.txt
+++ b/changelog.txt
@@ -16,11 +16,11 @@ Version 1.1.0
 - In pilot/squad view: When a player or squad has 0 fighter/attacker/bomber rating, show position as "-" instead of an arbitrary, large position.
 - Fix formating on main page on non-english pages, and also when "Best X in last 24 hours" and "Best live X" have non-full entries.
 
-Version 1.2.0
+Version 2.0.0
 
 - Introduction of modules system. SplitRankings turned into a module.
 - Module SplitRankings: Add fighter/atttacker/bomber rankings to VLife page.
 - Module SplitRankings: Jabo sorties (e.g. a jabo FW-190) now contribute to attacker rating. Me-262 and P-38 sorties without bombs contribute to fighter ratings (they both used to be considered attackers).
 - New module: Ammo Breakdown. See which shots you hit, and which shots you got hit by in indivual sortie pages.
-- New module: Ironman Stats. A new table which shows you how your current pilot life stacks up against all other current pilot lives.
-- Ironman Stats: Display more information on VLife page. E.g. your kills/per aircraft lost.
+- New module: Ironman Stats. A new table which shows you how your current pilot life stacks up against all other current pilot lives. Your stats on this page reset when your pilot dies!
+- Display more information on VLife page. E.g. your kills/per aircraft lost.
