--- a/changelog.txt
+++ b/changelog.txt
@@ -24,3 +24,4 @@ Version 2.0.0
 - New module: Ammo Breakdown. See which shots you hit, and which shots you got hit by in indivual sortie pages.
 - New module: Ironman Stats. A new table which shows you how your current pilot life stacks up against all other current pilot lives. Your stats on this page reset when your pilot dies!
 - Display more information on VLife page. E.g. your kills/per aircraft lost.
+- Update to version 1.2.49 of IL-2 Stats.
