--- a/changelog.txt
+++ b/changelog.txt
@@ -29,3 +29,7 @@ Version 2.0.0
 Version 2.0.1
 
 - Fix CSS issue with VLife page. Now "KDR", "Ratio" and so on are correctly rendered.
+
+Version 2.0.2
+
+- Update Spanish localization.
