--- a/changelog.txt
+++ b/changelog.txt
@@ -38,4 +38,4 @@ Version 1.3.1
 
 Version 1.3.1
 
-- Upgrade to version 2.0.2 of enhacements and 1.2.1 of aircraft.
+- Upgrade to version 2.0.2 of enhacements
