--- a/changelog.txt
+++ b/changelog.txt
@@ -44,3 +44,4 @@ Version 1.3.3.
 
 Version 1.4.0
 - Upgrade to version 2.1.0 of enhancements.
+- Fix issue with merge of 2.9.2 of tanks, now "Sortie Logs Damaged" should appear properly.
