--- a/changelog.txt
+++ b/changelog.txt
@@ -47,3 +47,7 @@ Version 2.1.0
 Version 2.1.1
 
 - Fix an incorrect Russian translation.
+
+Version 2.2.0
+
+- Module Ammo Breakdown: Show which ammo caused damage in a "damage/damaged" line, and show it. Note this is an educated guess and not a gurantee!
