--- a/changelog.txt
+++ b/changelog.txt
@@ -57,3 +57,7 @@ Version 1.4.2
 
 - Update to 1.2.50 of IL2 Stats.
 - Update to 3.0.1 tank mod, 2.1.2 Enhancements, 1.2.1 Global Aircraft Stats.
+
+Version 1.4.3
+
+- Update to 1.2.2 Global Aircraft Stats.
