--- a/changelog.txt
+++ b/changelog.txt
@@ -65,3 +65,7 @@ Version 1.4.3
 Version 1.4.4
 
 - Update to 1.2.3 Global Aircraft Stats
+
+Version 1.4.5
+
+- Fix bug where new translations weren't showing up and instead causing a 500 error.
