--- a/changelog.txt
+++ b/changelog.txt
@@ -51,3 +51,7 @@ Version 2.1.1
 Version 2.1.2
 
 - Update to 1.2.50 of IL2 Stats.
+
+Version 2.1.3
+
+- Fix bug where not having adjustabe scores and penalties module caused an infinite recursion when trying to process stats.
