--- a/changelog.txt
+++ b/changelog.txt
@@ -81,3 +81,7 @@ Version 1.4.7
 Version 1.4.8
 
 - Update to 2.1.4 Enhancements.
+
+Version 1.4.9
+
+- Fix issue where AI tanks were causing stats process to hang.
