--- a/changelog.txt
+++ b/changelog.txt
@@ -59,3 +59,7 @@ Version 2.1.3
 Version 2.1.4
 
 - Fix bug where stats process would sometimes hang on ammo breakdown.
+
+Version 2.1.5
+
+- Fix malformed base.html
