--- a/changelog.txt
+++ b/changelog.txt
@@ -96,4 +96,4 @@ Version 1.4.11
 
 Version 1.5.0
 
-- Add seperate bonuses/penalities for tanks when using adjustable bonuses and penalities module.
+- Add separate bonuses/penalties for tanks when using adjustable bonuses and penalties module.
